# hupasiya

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  VALIDATION.md  build.rs
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.hp/contexts/myrepo/test-session/: context.md
.hp/contexts/myrepo/test-session-2/: context.md
.hp/contexts/myrepo/test-session/snapshots/: 20251113_020945_snap1.md  20251113_024143_initial.md
scripts/: install-hooks.sh  setup-hooks.sh
spec/: README.md  architecture.md  commands.md  configuration.md  context-structure.md  contributing.md  data-model.md  integration.md  roadmap.md  testing.md  workflows.md
src/: activity.rs  ai_tool.rs  cli.rs  collaboration.rs  completions.rs  config.rs  context.rs  error.rs  hn_client.rs  lib.rs  main.rs  models.rs  orchestration.rs  pr.rs  profiles.rs  progress.rs  session.rs  shepherd.rs  templates.rs  tutorial.rs  utilities.rs
